transcribe/api/k8s/overlays/stage/route-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aiplayground-route
spec:
  hostnames:
    - aiplayground.gcp.jknowledge.se
    - aiplayground.jknowledge.se
